--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="box">Hi!</div>
+    <div class="box">Hi!..</div>
   </body>
 </html>
